# MrsRomol

./: .env.example  clear_users_and_orders.sql  db_sxema_erd.html  main.py  migration_miniapp.sql  migration_miniapp_v2.sql  migration_product_images.sql  pyproject.toml  requirements.txt  restart.sh  supabase_schema.sql  test_telegram.sh
api/: __init__.py  config.py  database.py  main.py
api/middleware/: auth.py
api/models/: schemas.py
api/routers/: customers.py  internal.py  orders.py  payments.py  products.py
api/schemas/: customer.py  order.py  payment.py  product.py
api/utils/: notifications.py  notify.py  telegram.py
bot/: config.py  database.py
bot/handlers/: admin.py  catalog.py  my_orders.py  orders.py  payments.py  start.py
bot/keyboards/: admin.py  catalog.py  main_menu.py  orders.py
bot/messages/: __init__.py  en.py  ru.py  uz.py
bot/utils/: cache.py  formatters.py
miniapp/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
miniapp/src/: App.jsx  index.css
miniapp/src/api/: client.js  customers.js  orders.js  payments.js  products.js
miniapp/src/components/: BottomNav.jsx  CartItem.jsx  OrderCard.jsx  OrderTimeline.jsx  ProductCard.jsx  ProductGrid.jsx
miniapp/src/hooks/: useCustomer.js  useOrders.js  useProducts.js  useTelegram.js
miniapp/src/i18n/: en.js  index.js  ru.js  uz.js
miniapp/src/pages/: CartPage.jsx  CatalogPage.jsx  OrdersPage.jsx  ProductPage.jsx  ProfilePage.jsx
miniapp/src/store/: cartStore.js  useCartStore.js  useUserStore.js  userStore.js
miniapp/src/utils/: formatDate.js  (+1 more)
(+12 files in other folders)
